changed file name/structure

--- a/archive.conf
+++ b/archive.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-        ServerName movies.mohidulabedin.tech
+        ServerName archive.mohidulabedin.tech
 
         ProxyRequests off
 
